--- a/files/remote/containerd/config.toml.j2
+++ b/files/remote/containerd/config.toml.j2
@@ -170,8 +170,8 @@ config_path = ""
 [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
 
 # Add the registry located in the control plane node
-[plugins."io.containerd.grpc.v1.cri".registry.mirrors."192.168.0.11:5000"]
-endpoint = ["http://192.168.0.11:5000"]
+[plugins."io.containerd.grpc.v1.cri".registry.mirrors."{{ k8s_api_server_ip }}:5000"]
+endpoint = ["http://{{ k8s_api_server_ip }}:5000"]
 
 [plugins."io.containerd.grpc.v1.cri".x509_key_pair_streaming]
 tls_cert_file = ""
